<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailActivity"
    android:paddingTop="24dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMenu"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:cardBackgroundColor="@color/banner_brown"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        >
        <ImageView
            android:id="@+id/menuId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drink" />

    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardMenu"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/item"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/titleMenu"
        app:layout_constraintStart_toStartOf="parent"
        />
        <RadioGroup
            android:id="@+id/sizeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/size300"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:checked="true"
                android:layout_marginEnd="24dp"
                android:textColor="@color/text_color_selected"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selected"
                />

            <RadioButton
                android:id="@+id/size400"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:gravity="center"
                android:checked="false"
                android:layout_marginEnd="24dp"
                android:textColor="@color/text_color_selected"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selected"
                />

            <RadioButton
                android:id="@+id/size500"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_weight="1"
                android:gravity="center"
                android:checked="false"
                android:textColor="@color/text_color_selected"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selected" />
        </RadioGroup>

    <TextView
        android:id="@+id/additives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/additives"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sizeGroup"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/sizeAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/additives"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sugar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:checked="true"
            android:layout_marginEnd="24dp"
            android:textColor="@color/text_color_selected"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selected"
            />

        <RadioButton
            android:id="@+id/cinnamon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:gravity="center"
            android:checked="false"
            android:layout_marginEnd="24dp"
            android:textColor="@color/text_color_selected"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selected"
            />

        <RadioButton
            android:id="@+id/syrup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="center"
            android:checked="false"
            android:textColor="@color/text_color_selected"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selected" />
    </RadioGroup>


    <TextView
        android:id="@+id/realPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/real_price"
        android:textSize="18sp"
        android:foreground="@drawable/strikethrough_text_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeAdditives"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/discount_price"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeAdditives" />
    
    <ImageView
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_remove"
        app:layout_constraintTop_toBottomOf="@id/sizeAdditives"
        app:layout_constraintEnd_toStartOf="@id/count"/>

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/sizeAdditives"
        app:layout_constraintEnd_toStartOf="@id/add"/>

    
    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_plus"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeAdditives"/>


    <Button
        android:id="@+id/addToChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_chart"
        android:text="@string/add_to_chart"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        app:backgroundTint="@color/banner_brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/favorite"/>

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        android:layout_marginEnd="24dp"
        android:foregroundGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/addToChart"
        app:layout_constraintBottom_toBottomOf="@id/addToChart"
        />


</androidx.constraintlayout.widget.ConstraintLayout>